tests/baselines/reference/es6ModuleConstEnumDeclaration2.errors.txt
es6ModuleConstEnumDeclaration2.ts(13,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleConstEnumDeclaration2.ts(29,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es6ModuleConstEnumDeclaration2.ts (2 errors) ====
    export const enum e1 {
        a,
        b,
        c
    }
    const enum e2 {
        x,
        y,
        z
    }
    var x = e1.a;
    var y = e2.x;
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export const enum e3 {
            a,
            b,
            c
        }
        const enum e4 {
            x,
            y,
            z
        }
        var x1 = e1.a;
        var y1 = e2.x;
        var x2 = e3.a;
        var y2 = e4.x;
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export const enum e5 {
            a,
            b,
            c
        }
        const enum e6 {
            x,
            y,
            z
        }
        var x1 = e1.a;
        var y1 = e2.x;
        var x2 = e5.a;
        var y2 = e6.x;
        var x3 = m1.e3.a;
    }